--- a/equipos.html
+++ b/equipos.html
@@ -7,17 +7,23 @@
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="equipos.html">Equipos</a></li>
-        <li><a href="grupos.html">Grupos</a></li>
-        <li><a href="cruces.html">Cruces</a></li>
-        <li><a href="resultados.html">Resultados</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+        <div class="logo">Torneo de Verano</div>
+        <button class="menu-toggle" aria-label="Abrir menú">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </button>
+        <nav class="nav-menu">
+          <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="equipos.html">Equipos</a></li>
+            <li><a href="grupos.html">Grupos</a></li>
+            <li><a href="cruces.html">Cruces</a></li>
+            <li><a href="resultados.html">Resultados</a></li>
+          </ul>
+        </nav>
+      </header>
 
   <main class="equipos-grid">
     <!-- Card de equipo (repítela para cada uno) -->
@@ -158,10 +164,10 @@
   </main>
 
   <footer>
-    <div class="social">
-      <a href="https://instagram.com" target="_blank"><img src="img/instagram.png" alt="Instagram" /></a>
-      <a href="https://facebook.com" target="_blank"><img src="img/facebook.png" alt="Facebook" /></a>
-      <a href="https://whatsapp.com" target="_blank"><img src="img/whatsapp.png" alt="WhatsApp" /></a>
+    <div class="redes">
+      <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
+      <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
+      <a href="#"><img src="img/whatsapp.png" alt="WhatsApp"></a>
     </div>
   </footer>
 
