Equipos casi terminados

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Torneo de Verano</title>
   <link rel="stylesheet" href="css/styles.css">
-  <script defer src="js/main.js"></script>
 </head>
 <body>
   <header>
@@ -22,14 +21,12 @@
         <li><a href="grupos.html">Grupos</a></li>
         <li><a href="cruces.html">Cruces</a></li>
         <li><a href="resultados.html">Resultados</a></li>
+        <li><a href="prueba.html">prueba</a></li>
       </ul>
     </nav>
   </header>
   <main class="hero">
-    <div class="overlay-text">
-      <h1>Bienvenidos al Torneo de Verano</h1>
-      <p>Aquí va el texto que tú desees incluir, Antón.</p>
-    </div>
+    
   </main>
   <footer>
     <div class="redes">
