--- a/grupos.html
+++ b/grupos.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Grupos</title>
   <link rel="stylesheet" href="css/styles.css" />
+  <script src="js/main.js" defer></script>
   <script src="js/API.js" defer></script>
 </head>
 <body>
