--- a/resultados.html
+++ b/resultados.html
@@ -6,6 +6,7 @@
   <title>Resultados</title>
   <link rel="stylesheet" href="css/styles.css" />
   <script src="js/main.js" defer></script>
+  <script src="js/API.js" defer></script>
 </head>
 <body>
     <header>
@@ -19,7 +20,6 @@
           <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="equipos.html">Equipos</a></li>
-            <li><a href="grupos.html">Grupos</a></li>
             <li><a href="cruces.html">Cruces</a></li>
             <li><a href="resultados.html">Resultados</a></li>
           </ul>
