--- a/resultados.html
+++ b/resultados.html
@@ -28,7 +28,8 @@
 
   <main class="contenedor">
     <h1>Resultados</h1>
-    <p>Aquí aparecerán los resultados de los partidos jugados.</p>
+    <table id="tabla-clasificacion"></table>
+    <table id="tabla-resultados"></table>
   </main>
 
   <footer>
