Resultados por corregir y clasificacion hecha y renderizada

--- a/cruces.html
+++ b/cruces.html
@@ -21,6 +21,7 @@
             <li><a href="equipos.html">Equipos</a></li>
             <li><a href="cruces.html">Cruces</a></li>
             <li><a href="resultados.html">Resultados</a></li>
+            <li><a href="clasificacion.html">Clasificación</a></li>
           </ul>
         </nav>
       </header>
