--- a/clasificacion.html
+++ b/clasificacion.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Resultados</title>
+  <title>Cruces</title>
   <link rel="stylesheet" href="css/styles.css" />
   <script src="js/main.js" defer></script>
   <script src="js/API.js" defer></script>
@@ -28,8 +28,8 @@
       </header>
 
   <main class="contenedor">
-    <h1>Resultados</h1>    
-    <div id="contenedor-tarjetas"></div>
+    <h1>Clasificación</h1>
+    <table id="tabla-clasificacion" border="2px"></table>
   </main>
 
   <footer>
