Nombres de equipos corregidos

--- a/equipos.html
+++ b/equipos.html
@@ -25,13 +25,10 @@
         </ul>
       </nav>
     </header>
-
-    
     <main>
       <section class="grupo">
         <h1>GRUPO 1:</h1>
         <div class="equipos-grid">
-          <a href="https://cdlugo.com/">
             <div class="card">
               <div class="card-inner">
                 <div class="card-front">
@@ -43,10 +40,10 @@
                     Histórico do fútbol galego con 12 temporadas en 2ª División e
                     máis de 20 no terceiro escalón do fútbol español.
                   </p>
+                  <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
                 </div>
               </div>
             </div>
-          </a>
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
@@ -55,6 +52,7 @@
               <div class="card-back">
                 <h3>S.R. Calo</h3>
                 <p>Equipo anfitrión do torneo, gañador de tres Copas do Sar e actualmente asentado na 1ª Galicia. Leva sendo o referente no fútbol en Teo dende o 1961 baixo o lema "Máis que fútbol".</p>
+                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
@@ -66,39 +64,43 @@
               <div class="card-back">
                 <h3>F.C. Familiaçao</h3>
                 <p></p>
+                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/Ural.jpg" alt="S.R. Calo" />
+                <img src="img/equipos/Ural.jpg" alt="Ural-Español" />
               </div>
               <div class="card-back">
-                <h3>S.R. Calo</h3>
+                <h3>Ural-Español C.F</h3>
                 <p>Equipo anfitrión del torneo con gran tradición.</p>
+                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/Santa mariña.png" alt="S.R. Calo" />
+                <img src="img/equipos/Santa mariña.png" alt="Santa Mariña" />
               </div>
               <div class="card-back">
-                <h3>S.R. Calo</h3>
+                <h3>U.D. Santa Mariña</h3>
                 <p>Equipo anfitrión del torneo con gran tradición.</p>
+                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/Pabellon.png" alt="S.R. Calo" />
+                <img src="img/equipos/Pabellon.png" alt="Pabellón Ourense C.F." />
               </div>
               <div class="card-back">
-                <h3>S.R. Calo</h3>
+                <h3>Pabellón Ourense C.F.</h3>
                 <p>Equipo anfitrión del torneo con gran tradición.</p>
+                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
@@ -111,66 +113,72 @@
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/Ferrol.png" alt="S.R. Calo" />
+                <img src="img/equipos/Ferrol.png" alt="Rácing Club de Ferrol" />
               </div>
               <div class="card-back">
                 <h3>Racing Club de Ferrol</h3>
                 <p>Equipo anfitrión del torneo con gran tradición.</p>
+                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/Val miñor.jpg" alt="S.R. Calo" />
+                <img src="img/equipos/Val miñor.jpg" alt="E.D. Val Miñor Nigrán" />
               </div>
               <div class="card-back">
                 <h3>E.D. Val Miñor Nigrán</h3>
                 <p>Equipo anfitrión del torneo con gran tradición.</p>
+                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/Sp Academy.jpg" alt="S.R. Calo" />
+                <img src="img/equipos/Sp Academy.jpg" alt="Sporting Portugal Academy" />
               </div>
               <div class="card-back">
                 <h3>Sporting Portugal Academy</h3>
                 <p>Equipo anfitrión del torneo con gran tradición.</p>
+                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/Victoria.png" alt="S.R. Calo" />
+                <img src="img/equipos/Victoria.png" alt="Victoria C.F" />
               </div>
               <div class="card-back">
                 <h3>Victoria C.F</h3>
                 <p>Equipo anfitrión del torneo con gran tradición.</p>
+                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/chaves.png" alt="S.R. Calo" />
+                <img src="img/equipos/chaves.png" alt="G.D Chaves" />
               </div>
               <div class="card-back">
                 <h3>G.D Chaves</h3>
                 <p>Equipo anfitrión del torneo con gran tradición.</p>
+                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/Arteixo.jpg" alt="S.R. Calo" />
+                <img src="img/equipos/Arteixo.jpg" alt="Club Atlético Arteixo" />
               </div>
               <div class="card-back">
                 <h3>Club Atlético Arteixo</h3>
                 <p>Equipo anfitrión del torneo con gran tradición.</p>
+                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
