--- a/resultados.html
+++ b/resultados.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">Torneo de Verano</div>
+        <div class="logo"><img src="" alt=""></div>
         <button class="menu-toggle" aria-label="Abrir menú">
           <span class="bar"></span>
           <span class="bar"></span>
