--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
       </ul>
     </nav>
   </header>
-  <main class="hero">
-    
-  </main>
+  <main><p>hola</p></main>
   <footer>
     <div class="redes">
       <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
