--- a/resultados.html
+++ b/resultados.html
@@ -8,6 +8,29 @@
   <script src="js/main.js" defer></script>
   <script src="js/API.js" defer></script>
 </head>
+<style>
+  #loading {
+  text-align: center;
+  padding: 30px;
+  font-size: 1.5em;
+  color : #333;
+}
+  #spinner-img {
+    margin: 10px auto;
+    border: 5px solid ;
+    border-top: 5px solid ;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: girar 1s linear infinite;
+    color: #fff;
+  }
+
+  @keyframes girar {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+</style>
 <body>
     <header>
         <div class="logo"><img src="" alt=""></div>
@@ -29,6 +52,10 @@
 
   <main class="contenedor">
     <h1>Resultados</h1>    
+    <div id="loading">
+      <img src="/img/equipos/Calo.jpeg" id="spinner-img" alt="Cargando...">
+      <p>Cargando resultados...</p>
+    </div>
     <div id="contenedor-tarjetas"></div>
   </main>
 
