--- a/resultados.html
+++ b/resultados.html
@@ -6,7 +6,7 @@
   <title>Resultados</title>
   <link rel="stylesheet" href="css/styles.css" />
   <script src="js/main.js" defer></script>
-  <script src="js/API.js" defer></script>
+  <script src="js/getResultados.js" defer></script>
 </head>
 <style>
   #loading {
@@ -33,7 +33,7 @@
 </style>
 <body>
     <header>
-        <div class="logo"><img src="" alt=""></div>
+        <div class="logo"></div>
         <button class="menu-toggle" aria-label="Abrir menú">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -50,8 +50,8 @@
         </nav>
       </header>
 
-  <main class="contenedor">
-    <h1>Resultados</h1>    
+  <main class="contenedor">  
+      
     <div id="loading">
       <img src="/img/equipos/Calo.jpeg" id="spinner-img" alt="Cargando...">
       <p>Cargando resultados...</p>
