--- a/equipos.html
+++ b/equipos.html
@@ -52,7 +52,7 @@
               <div class="card-back">
                 <h3>S.R. Calo</h3>
                 <p>Equipo anfitrión do torneo, gañador de tres Copas do Sar e actualmente asentado na 1ª Galicia. Leva sendo o referente no fútbol en Teo dende o 1961 baixo o lema "Máis que fútbol".</p>
-                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
@@ -62,9 +62,9 @@
                 <img src="img/equipos/Familiaçao.png" alt="F.C. Familiaçao" />
               </div>
               <div class="card-back">
-                <h3>F.C. Familiaçao</h3>
+                <h3>F.C. Familiçao</h3>
                 <p></p>
-                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="https://www.fcfamalicao.pt/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
@@ -76,7 +76,7 @@
               <div class="card-back">
                 <h3>Ural-Español C.F</h3>
                 <p>Equipo anfitrión del torneo con gran tradición.</p>
-                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="http://www.uralcf.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
@@ -88,7 +88,7 @@
               <div class="card-back">
                 <h3>U.D. Santa Mariña</h3>
                 <p>Equipo anfitrión del torneo con gran tradición.</p>
-                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="https://www.udsantamarina.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
@@ -100,7 +100,7 @@
               <div class="card-back">
                 <h3>Pabellón Ourense C.F.</h3>
                 <p>Equipo anfitrión del torneo con gran tradición.</p>
-                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="https://www.pabelloncf.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
@@ -118,7 +118,7 @@
               <div class="card-back">
                 <h3>Racing Club de Ferrol</h3>
                 <p>Equipo anfitrión del torneo con gran tradición.</p>
-                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="https://www.racingclubferrol.net/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
@@ -130,7 +130,7 @@
               <div class="card-back">
                 <h3>E.D. Val Miñor Nigrán</h3>
                 <p>Equipo anfitrión del torneo con gran tradición.</p>
-                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="https://www.edvmnigran.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
@@ -142,7 +142,7 @@
               <div class="card-back">
                 <h3>Sporting Portugal Academy</h3>
                 <p>Equipo anfitrión del torneo con gran tradición.</p>
-                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="https://www.sporting.pt/en/tags/academy" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
@@ -154,7 +154,7 @@
               <div class="card-back">
                 <h3>Victoria C.F</h3>
                 <p>Equipo anfitrión del torneo con gran tradición.</p>
-                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="http://victoriacf.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
@@ -166,7 +166,7 @@
               <div class="card-back">
                 <h3>G.D Chaves</h3>
                 <p>Equipo anfitrión del torneo con gran tradición.</p>
-                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="https://gdchaves.pt/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
@@ -178,7 +178,7 @@
               <div class="card-back">
                 <h3>Club Atlético Arteixo</h3>
                 <p>Equipo anfitrión del torneo con gran tradición.</p>
-                <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="https://atleticoarteixo.es/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
