Posible arreglo fotos

--- a/equipos.html
+++ b/equipos.html
@@ -32,7 +32,7 @@
             <div class="card">
               <div class="card-inner">
                 <div class="card-front">
-                  <img src="img/equipos/Lugo.png" alt="C.D. Lugo" />
+                  <img src="img/equipos/lugo.png" alt="C.D. Lugo" />
                 </div>
                 <div class="card-back">
                   <h3>C.D.Lugo</h3>
@@ -47,7 +47,7 @@
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/Calo.jpeg" alt="S.R. Calo" />
+                <img src="img/equipos/calo.jpeg" alt="S.R. Calo" />
               </div>
               <div class="card-back">
                 <h3>S.R. Calo</h3>
@@ -59,7 +59,7 @@
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/Familiaçao.png" alt="F.C. Familiaçao" />
+                <img src="img/equipos/familiaçao.png" alt="F.C. Familiçao" />
               </div>
               <div class="card-back">
                 <h3>F.C. Familiçao</h3>
@@ -71,7 +71,7 @@
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/Ural.jpg" alt="Ural-Español" />
+                <img src="img/equipos/ural.jpg" alt="Ural-Español" />
               </div>
               <div class="card-back">
                 <h3>Ural-Español C.F</h3>
@@ -83,7 +83,7 @@
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/Santa mariña.png" alt="Santa Mariña" />
+                <img src="img/equipos/santamarina.png" alt="Santa Mariña" />
               </div>
               <div class="card-back">
                 <h3>U.D. Santa Mariña</h3>
@@ -95,7 +95,7 @@
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/Pabellon.png" alt="Pabellón Ourense C.F." />
+                <img src="img/equipos/pabellon.png" alt="Pabellón Ourense C.F." />
               </div>
               <div class="card-back">
                 <h3>Pabellón Ourense C.F.</h3>
@@ -113,7 +113,7 @@
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/Ferrol.png" alt="Rácing Club de Ferrol" />
+                <img src="img/equipos/ferrol.png" alt="Rácing Club de Ferrol" />
               </div>
               <div class="card-back">
                 <h3>Racing Club de Ferrol</h3>
@@ -125,7 +125,7 @@
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/Val miñor.jpg" alt="E.D. Val Miñor Nigrán" />
+                <img src="img/equipos/valminor.jpg" alt="E.D. Val Miñor Nigrán" />
               </div>
               <div class="card-back">
                 <h3>E.D. Val Miñor Nigrán</h3>
@@ -137,7 +137,7 @@
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/Sp Academy.jpg" alt="Sporting Portugal Academy" />
+                <img src="img/equipos/spacademy.jpg" alt="Sporting Portugal Academy" />
               </div>
               <div class="card-back">
                 <h3>Sporting Portugal Academy</h3>
@@ -149,7 +149,7 @@
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/Victoria.png" alt="Victoria C.F" />
+                <img src="img/equipos/victoria.png" alt="Victoria C.F" />
               </div>
               <div class="card-back">
                 <h3>Victoria C.F</h3>
@@ -173,7 +173,7 @@
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/Arteixo.jpg" alt="Club Atlético Arteixo" />
+                <img src="img/equipos/arteixo.jpg" alt="Club Atlético Arteixo" />
               </div>
               <div class="card-back">
                 <h3>Club Atlético Arteixo</h3>
