--- a/resultados.html
+++ b/resultados.html
@@ -53,7 +53,7 @@
   <main class="contenedor">  
       
     <div id="loading">
-      <img src="/img/equipos/Calo.jpeg" id="spinner-img" alt="Cargando...">
+      <img src="img/equipos/calo.jpeg" id="spinner-img" alt="Cargando...">
       <p>Cargando resultados...</p>
     </div>
     <div id="contenedor-tarjetas"></div>
