Logo y boton para ir arriba

--- a/clasificacion.html
+++ b/clasificacion.html
@@ -31,9 +31,10 @@
       100% { transform: rotate(360deg); }
     }
   </style>
+  
 <body>
     <header>
-        <div class="logo">Torneo de Verano</div>
+      <img src="img/logo.png" alt="Logo">
         <button class="menu-toggle" aria-label="Abrir menú">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -58,7 +59,22 @@
     </div>
     <table id="tabla-clasificacion" border="2px"></table>
   </main>
-
+  <button id="btn-top" title="Volver arriba">↑</button>
+  <script>
+    const btnTop = document.getElementById('btn-top')
+  
+    window.onscroll = () => {
+      if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+        btnTop.style.display = 'block'
+      } else {
+        btnTop.style.display = 'none'
+      }
+    }
+  
+    btnTop.onclick = () => {
+      window.scrollTo({ top: 0, behavior: 'smooth' })
+    }
+  </script>
   <footer>
     <div class="redes">
       <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
@@ -67,6 +83,5 @@
     </div>
   </footer>
 
-  <script src="js/main.js"></script>
 </body>
 </html>
