--- a/cruces.html
+++ b/cruces.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">Torneo de Verano</div>
+      <img src="img/logo.png" alt="Logo">
         <button class="menu-toggle" aria-label="Abrir menú">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -31,6 +31,22 @@
     <p>Aquí aparecerán los cruces del torneo, como eliminatorias y enfrentamientos directos.</p>
   </main>
 
+  <button id="btn-top" title="Volver arriba">↑</button>
+  <script>
+    const btnTop = document.getElementById('btn-top')
+  
+    window.onscroll = () => {
+      if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+        btnTop.style.display = 'block'
+      } else {
+        btnTop.style.display = 'none'
+      }
+    }
+  
+    btnTop.onclick = () => {
+      window.scrollTo({ top: 0, behavior: 'smooth' })
+    }
+  </script>
   <footer>
     <div class="redes">
       <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
@@ -39,6 +55,5 @@
     </div>
   </footer>
 
-  <script src="js/main.js"></script>
 </body>
 </html>
