Seccion equipos terminada, footer casi terminado y correccion nombre Famalicao

--- a/equipos.html
+++ b/equipos.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <img src="img/logo.png" alt="Logo">
+      <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
       <button class="menu-toggle" aria-label="Abrir menú">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -62,8 +62,8 @@
                 <img src="img/equipos/familiaçao.png" alt="F.C. Familiçao" />
               </div>
               <div class="card-back">
-                <h3>F.C. Familiçao</h3>
-                <p></p>
+                <h3>F.C. Famalicão</h3>
+                <p>Club portugués con máis de 90 anos de historia, recoñecido polo seu ascenso meteórico á Primeira Liga nos últimos anos.</p>
                 <a href="https://www.fcfamalicao.pt/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
@@ -75,7 +75,7 @@
               </div>
               <div class="card-back">
                 <h3>Ural-Español C.F</h3>
-                <p>Equipo anfitrión del torneo con gran tradición.</p>
+                <p>Histórico da cidade da Coruña, cun traballo exemplar na canteira e décadas de compromiso co fútbol base galego.</p>
                 <a href="http://www.uralcf.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
@@ -87,7 +87,7 @@
               </div>
               <div class="card-back">
                 <h3>U.D. Santa Mariña</h3>
-                <p>Equipo anfitrión del torneo con gran tradición.</p>
+                <p>Referente do fútbol formativo en Vigo, cuna de moitos talentos que chegaron ao fútbol profesional.</p>
                 <a href="https://www.udsantamarina.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
@@ -99,7 +99,7 @@
               </div>
               <div class="card-back">
                 <h3>Pabellón Ourense C.F.</h3>
-                <p>Equipo anfitrión del torneo con gran tradición.</p>
+                <p>Emblema do fútbol base ourensán, con numerosas participacións en División de Honra xuvenil e recoñecido polo seu traballo en formación.</p>
                 <a href="https://www.pabelloncf.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
@@ -117,7 +117,7 @@
               </div>
               <div class="card-back">
                 <h3>Racing Club de Ferrol</h3>
-                <p>Equipo anfitrión del torneo con gran tradición.</p>
+                <p>Histórico do fútbol galego, con 35 tempadas en 2ª División e aspiracións constantes de volver ao fútbol profesional.</p>
                 <a href="https://www.racingclubferrol.net/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
@@ -129,7 +129,7 @@
               </div>
               <div class="card-back">
                 <h3>E.D. Val Miñor Nigrán</h3>
-                <p>Equipo anfitrión del torneo con gran tradición.</p>
+                <p>Escola de referencia en Nigrán, con ampla experiencia en competicións nacionais e un forte compromiso coa formación deportiva e persoal.</p>
                 <a href="https://www.edvmnigran.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
@@ -141,7 +141,7 @@
               </div>
               <div class="card-back">
                 <h3>Sporting Portugal Academy</h3>
-                <p>Equipo anfitrión del torneo con gran tradición.</p>
+                <p>Delegación oficial do histórico Sporting CP, comprometida coa formación de talentos baixo a filosofía dun dos clubs máis laureados de Portugal.</p>
                 <a href="https://www.sporting.pt/en/tags/academy" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
@@ -153,7 +153,7 @@
               </div>
               <div class="card-back">
                 <h3>Victoria C.F</h3>
-                <p>Equipo anfitrión del torneo con gran tradición.</p>
+                <p>Un dos clubs máis antigos da Coruña, con gran tradición no fútbol afeccionado e base da cidade herculina.</p>
                 <a href="http://victoriacf.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
@@ -165,7 +165,7 @@
               </div>
               <div class="card-back">
                 <h3>G.D Chaves</h3>
-                <p>Equipo anfitrión del torneo con gran tradición.</p>
+                <p>Equipo histórico de Trás-os-Montes en Portugal, con varias tempadas en Primeira e unha afección apaixonada.</p>
                 <a href="https://gdchaves.pt/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
@@ -177,7 +177,7 @@
               </div>
               <div class="card-back">
                 <h3>Club Atlético Arteixo</h3>
-                <p>Equipo anfitrión del torneo con gran tradición.</p>
+                <p>Club da provincia da Coruña cunha traxectoria notable no fútbol galego e momentos destacados na antiga 2ªB.</p>
                 <a href="https://atleticoarteixo.es/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
@@ -203,13 +203,14 @@
         window.scrollTo({ top: 0, behavior: 'smooth' })
       }
     </script>
-    <footer>
-      <div class="redes">
-        <a href="#"><img src="img/instagram.png" alt="Instagram" /></a>
-        <a href="#"><img src="img/facebook.png" alt="Facebook" /></a>
-        <a href="#"><img src="img/whatsapp.png" alt="WhatsApp" /></a>
-      </div>
-    </footer>
+  <footer>
+    <div class="redes">
+      <a href="https://www.instagram.com/futbolcalosr/"><img src="img/instagram.png" alt="Instagram"></a>
+      <a href="https://www.instagram.com/torneosrcalo/"><img src="img/logo.png" alt="torneosrcalo"></a>
+      <a href="https://www.facebook.com/p/F%C3%BAtbol-Calo-SR-100057430399598/?locale=es_ES"><img src="img/facebook.png" alt="Facebook"></a>
+      <a href="https://whatsapp.com/channel/0029VarRrbVLI8YSNcQ9te24"><img src="img/whatsapp.png" alt="WhatsApp"></a>
+    </div>
+  </footer>
 
     
   </body>
