--- a/cruces.html
+++ b/cruces.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-      <img src="img/logo.png" alt="Logo">
+      <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
         <button class="menu-toggle" aria-label="Abrir menú">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -49,9 +49,10 @@
   </script>
   <footer>
     <div class="redes">
-      <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
-      <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
-      <a href="#"><img src="img/whatsapp.png" alt="WhatsApp"></a>
+      <a href="https://www.instagram.com/futbolcalosr/"><img src="img/instagram.png" alt="Instagram"></a>
+      <a href="https://www.instagram.com/torneosrcalo/"><img src="img/logo.png" alt="torneosrcalo"></a>
+      <a href="https://www.facebook.com/p/F%C3%BAtbol-Calo-SR-100057430399598/?locale=es_ES"><img src="img/facebook.png" alt="Facebook"></a>
+      <a href="https://whatsapp.com/channel/0029VarRrbVLI8YSNcQ9te24"><img src="img/whatsapp.png" alt="WhatsApp"></a>
     </div>
   </footer>
 
