--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Torneo de Verano</title>
+    <title>Inicio</title>
+    <link rel="icon" href="img/logo.png" type="image/png">
     <link rel="stylesheet" href="css/styles.css" />
     <script src="js/main.js" defer></script>
   </head>
@@ -26,6 +27,8 @@
         </ul>
       </nav>
     </header>
+    <h1>Benvidos á web oficial do II Torneo Alevín Hyundai S.R. Calo</h1>
+    <p>Aquí atoparás toda a información necesaria para que a túa experiencia en Rebordelo sexa perfecta.</p>
 
     <main class="grid-info-cards">
       <section id="organizacion" class="cardInfo">
@@ -34,10 +37,13 @@
           <span class="arrow">▼</span>
         </h2>
         <div class="card-content">
+          <h3>Esta será a organización do campo de fútbol de Rebordelo:</h3>
           <img
             src="img/organizacion-aerea.jpg"
             alt="Imaxe aérea da organización"
           />
+          <br>
+          <a href="https://www.google.com/maps/place/Campo+de+Futbol+Rebordelo/@42.8252868,-8.5930013,17z/data=!3m1!4b1!4m6!3m5!1s0xd2f023856c1eb71:0x8b502e4683670afa!8m2!3d42.8252868!4d-8.5930013!16s%2Fg%2F11byv8l3wl?entry=ttu&g_ep=EgoyMDI1MDUwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener noreferrer">Ubicación a Rebordelo</a>
         </div>
       </section>
 
@@ -47,9 +53,74 @@
           <span class="arrow">▼</span>
         </h2>
         <div class="card-content">
+          <h3>Esta é unha imaxe aérea dos lugares de aparcamento:</h3>
           <img src="img/parkings.jpg" alt="Imaxe dos parkings" />
           <h3>Información dos parkings</h3>
           <img src="img/infoParking.jpg" alt="Info1" />
+          <h3>Ubicacións directas aos parkings:</h3>
+          <p>Todos estos parkings encóntranse a tan só 2 minutos camiñando do campo de fútbol de Rebordelo.</p>
+          <a href="https://www.google.com/maps/place/42%C2%B049'29.3%22N+8%C2%B035'44.9%22W/@42.824791,-8.595791,17z/data=!3m1!4b1!4m4!3m3!8m2!3d42.824791!4d-8.595791?entry=ttu&g_ep=EgoyMDI1MDUwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener noreferrer">Parking 1</a>
+          <a href="https://www.google.es/maps/place/42%C2%B049'34.0%22N+8%C2%B035'39.9%22W/@42.826121,-8.594404,17z/data=!3m1!4b1!4m4!3m3!8m2!3d42.826121!4d-8.594404?entry=ttu&g_ep=EgoyMDI1MDUwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener noreferrer">Parking 2</a>
+          <a href="https://www.google.es/maps/place/42%C2%B049'32.1%22N+8%C2%B035'36.2%22W/@42.825583,-8.593398,17z/data=!3m1!4b1!4m4!3m3!8m2!3d42.825583!4d-8.593398?entry=ttu&g_ep=EgoyMDI1MDUwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener noreferrer">Parking 3</a>
+          <a href="https://www.google.es/maps/place/Aparcamento+P%C3%BAblico/@42.8250724,-8.592695,163m/data=!3m1!1e3!4m6!3m5!1s0xd2f036b5d32eb97:0xfe8d49e929d94154!8m2!3d42.8250597!4d-8.5931006!16s%2Fg%2F11tn6gxkp0?entry=ttu&g_ep=EgoyMDI1MDUwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener noreferrer">Parking 4</a>
+        </div>
+      </section>
+      <section id="normas" class="cardInfo">
+        <h2>
+          Normas do torneo
+          <span class="arrow">▼</span>
+        </h2>
+        <div class="card-content">
+          <h3>Regulamento:</h3>
+          <p>As normas son as establecidas pola organización do Torneo. Toda a normativa estará en poder da organización e a
+            disposición dos equipos durante toda a competición.</p>
+            <ul>
+              <li>O sistema de competición estará dividido en fase de grupos, fases eliminatorias e finais.</li>
+              <li>O Torneo levarase a cabo o Sábado 7 de Xuño de 2025 dende as 09:30h no Municipal de Rebordelo</li>
+            </ul>
+            <h4>Normativa Principal:</h4>
+            <ul>
+              <li>O día do torneo, os delegados/as dos equipos deberán presentarse na zona de información como mínimo 15
+                minutos antes do seu primeiro encontro. Na mesa entregarán o listado de inscrición, que tamén pode ser
+                enviado antes ó e-mail do Clube (deportes@srcalo.com) ou ó e-mail do torneo (torneosrcalo@gmail.com).</li>
+              <li>Permítense un máximo de 15 xogadores/as por equipo. Os xogadores/as terán asignado un número, que
+                será fixo durante todo o torneo. Unha vez comece o torneo, non se poderá modificar o listado.</li>
+              <li>Cada equipo debe presentar, no caso de ser reclamadas pola organización, as licenzas federativas dos
+                xogadores/as inscritos.</li>
+              <li>Os equipos só poderán quecer nas zonas habilitadas, xunto a cada campo de F8.</li>
+              <li>Os equipos deberán estar na zona de quecemento, e preparados para o encontro, 5 minutos antes do
+                comezo do mismo. No caso dun retraso de máis de 2 minutos sobre a hora de comezo do encontro, este
+                será dado por perdido ao equipo infractor por 3 goles a 0.</li>
+              <li>Durante os encontros, só poderán estar no banco as persoas acreditadas no listado de xogadores/as,
+                técnicos ou delegados/as.</li>
+              <li>Calquera cartón vermello mostrado a xogadores, técnicos ou delegados/as impedirá a participación do
+                expulsado/a no seguinte encontro.</li>
+              <li>No caso dalgunha incidencia non reflectida neste regulamento, a organización resérvase o dereito a tomar as
+                decisións que considere oportunas para o bo funcionamento do torneo.</li>
+              <li>Se o equipo acude ao torneo con xogadores a proba, deberá presentar a debida autorización do equipo no
+                que ten a ficha no momento da celebración do torneo.</li>
+            </ul>
+            <h4>Fase de grupos:</h4>
+            <ul>
+              <li>Clasifícanse para CUARTOS OURO do 1º ao 4º de cada grupo.</li>
+              <li>Clasifícanse para SEMIS PRATA o 5º e 6º de cada grupo.</li>
+              <li>Cada partido gañado serán 3 puntos, empatado 1 punto, e perdido 0 puntos.</li>
+              <li>En caso de empate na clasificación de grupos, terase en conta o enfrontamento directo, logo a mellor
+                diferencia de goles, menos goles en contra e, por último, máis goles a favor. Se persiste o empate,
+                lanzaranse 3 penaltis para dirimir o mellor clasificado.</li>
+              <li>A duración dos encontros será de 22 minutos nun tempo único.</li>
+            </ul>
+            <h4>Fase final:</h4>
+            <ul>
+              <li>CUARTOS OURO: Xogaranse 2 TEMPOS de 14 minutos.</li>
+              <li>SEMIFINAIS OURO: Xogaranse 2 TEMPOS de 14 minutos.</li>
+              <li>FINAL OURO: Xogaranse 2 tempos de 16 minutos cun descanso de 3 minutos.</li>
+              <li>SEMIFINAIS PRATA: Xogaranse 25 minutos nun tempo único.</li>
+              <li>FINAL PRATA: Xogaranse 2 tempos de 14 minutos.</li>
+              <li>No caso de empate, o partido resolverase cunha quenda de 3 penaltis que se lanzarán de forma alternativa.
+                Se persiste a igualada, seguiranse lanzando penaltis ata desfacer a mesma. Un xogador non volverá lanzar
+                un penalti ata que non tirasen todos os seus compañeiros/as.</li>
+            </ul>
         </div>
       </section>
 
@@ -59,76 +130,77 @@
           <span class="arrow">▼</span>
         </h2>
         <div class="card-content">
-          <img src="img/menu-cantina.jpg" alt="Menú da cantina" />
+          <h3>Dispoñemos dunha cantina para que tomedes algo e repoñades forzas!</h3>
+          <img src="img/cartacantina.jpg" alt="Menú da cantina" />
+        </div>
+      </section>
+
+      <section id="comidaXogadores" class="cardInfo">
+        <h2>
+          Comida para xogadores/as e corpo técnico
+          <span class="arrow">▼</span>
+        </h2>
+        <div class="card-content">
+          <p>O comedor estará situado ao lado do campo, no local da S.R. Calo, alí haberá persoal do noso club para garantir a orde e que todo sexa entregado segundo a reserva feita.
+             O menú sera elaborado por unha empresa externa ao club, todos os productos e preparacións pasan uns controis rigurosos de calidade.
+          </p>
+          <h3>Menú proposto:</h3>
+          <img src="img/menujugadores.jpg" alt="menujugadores">
           <h3>Horarios das comidas</h3>
           <table>
             <thead>
               <tr>
-                <th>Hora</th>
-                <th>Grupo</th>
+                <th>Turno</th>
+                <th>Horario</th>
+                <th>Equipos no comedor</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>12:30</td>
-                <td>Grupo A</td>
+                <td>1</td>
+                <td>13:30 - 14:10</td>
+                <td>S.R. Calo e "Completar"</td>
               </tr>
               <tr>
-                <td>13:00</td>
-                <td>Grupo B</td>
+                <td>2</td>
+                <td>13:45 - 14:30</td>
+                <td>S.R. Calo, "Completar", C.D. Lugo e S.P. Academy</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>14:10 - 14:55</td>
+                <td>C.D. Lugo, S.P. Academy, E.D. Val Miñor, U.D. Santa Mariña, F.C. Famalicão e G.D. Chaves</td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>14:35 - 15:20</td>
+                <td>E.D. Val Miñor, U.D. Santa Mariña, F.C. Famalicão e G.D. Chaves, Pabellón Ourense, C.A. Arteixo, Ural C.F. e Victoria C.F.</td>
               </tr>
             </tbody>
           </table>
         </div>
       </section>
-
-      <section id="comida" class="cardInfo">
+      <section id="comidaAcompañantes" class="cardInfo">
         <h2>
-          Onde comer
+          Comida para acompañantes
           <span class="arrow">▼</span>
         </h2>
-        <div class="comedor">
-          <h3>Bayuca</h3>
-          <p>
-            Comedor cuberto con menú adaptado para nenos. Espazo amplo e cómodo.
-          </p>
-          <a
-            href="https://www.google.com/maps?q=bayuca+rebordelo"
-            target="_blank"
-            >Ver ubicación</a
-          >
-        </div>
-        <div class="comedor">
-          <h3>San Martiño</h3>
-          <p>
-            Espazo con servizo de comidas para participantes e familiares, preto
-            do campo.
-          </p>
-          <a
-            href="https://www.google.com/maps?q=san+marti%C3%B1o+rebordelo"
-            target="_blank"
-            >Ver ubicación</a
-          >
+        <div class="card-content">
+          <h3>A maiores da nosa maravillosa cantina, dispoñemos de dous establecementos nos que vos recomendamos ir a comer:</h3>
+          <h4>ASADOR ALDEA BAYUCA</h4>
+          <p>Unha distancia duns 11 minutos ao campo de fútbol de Rebordelo, ten opción de adaptación de menús a veganos/as e intolerantes e con espacio exterior en caso de bo tempo.</p>
+          <h4>O menú é o seguinte:</h4>
+          <img src="img/menubayuca.jpg" alt="menu bayuca"><br>
+          <a href="https://www.google.es/maps/dir/Asador+Aldea+Bayuca,+Baiuca,+Aldea+Loureiro,+Pazos,+Padr%C3%B3n/Campo+de+Futbol+Rebordelo,+CP-8202,+15866+Teo,+A+Coru%C3%B1a/@42.8003256,-8.6422078,20812m/am=t/data=!3m1!1e3!4m13!4m12!1m5!1m1!1s0xd2f03471552674d:0xde04b22e76503862!2m2!1d-8.6516689!2d42.770608!1m5!1m1!1s0xd2f023856c1eb71:0x8b502e4683670afa!2m2!1d-8.5930013!2d42.8252868?entry=ttu&g_ep=EgoyMDI1MDUwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener noreferrer">Ubicación Asador Aldea Bayuca</a>
+          <h4>RESTAURANTE SAN MARTIÑO</h4>
+          <p>Unha distancia duns 5 minutos ao campo de fútbol de Rebordelo, ten opción de adaptación de menús a veganos/as e intolerantes, conta cun pequeno parque para os nenos/as.</p>
+          <h4>O menú é o seguinte:</h4>
+          <img src="img/menusanmartino.jpg" alt="menu bayuca"><br>
+          <a href="https://www.google.es/maps/dir/Campo+de+Futbol+Rebordelo,+CP-8202,+15866+Teo,+A+Coru%C3%B1a/Restaurante+San+Marti%C3%B1o+(Teo),+N-550,+TEO,+Teo/@42.8228163,-8.6252705,5201m/data=!3m2!1e3!4b1!4m13!4m12!1m5!1m1!1s0xd2f023856c1eb71:0x8b502e4683670afa!2m2!1d-8.5930013!2d42.8252868!1m5!1m1!1s0xd2f02563dfaf759:0x6c5495dc4985aa04!2m2!1d-8.6171138!2d42.8156798?entry=ttu&g_ep=EgoyMDI1MDUwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener noreferrer">Ubicación Restaurante San Martiño</a><br>
+          <small>⚠️Nota:Estos menús e prezos son en caso de ter reservado antes do 03/06/2025. Á hora de chamar, explicar que se chama para reservar polo torneo da S.R.Calo.</small>
         </div>
       </section>
-
-      <section id="normas" class="cardInfo">
-        <h2>
-          Normas do torneo
-          <span class="arrow">▼</span>
-        </h2>
-        <ul>
-          <li>Fase de grupos a unha volta.</li>
-          <li>
-            Os dous primeiros clasificados de cada grupo acceden ás
-            eliminatorias.
-          </li>
-          <li>Empates resoltos por penaltis.</li>
-          <li>Tempo dos partidos: 2 partes de 12 minutos.</li>
-        </ul>
-      </section>
-
-      <section id="enquisa" class="cardInfo">
+      <!-- <section id="enquisa" class="cardInfo">
         <h2>
           Axúdanos a mellorar!
           <span class="arrow">▼</span>
@@ -137,7 +209,7 @@
         <a class="btn" href="https://forms.gle/tu-enquisa" target="_blank"
           >Ir á enquisa</a
         >
-      </section>
+      </section> -->
     </main>
     <button id="btn-top" title="Volver arriba">↑</button>
 
