Corrección de algunos pequeños errores en estilos

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </nav>
     </header>
     <h1>Benvidos á web oficial do II Torneo Alevín Hyundai S.R. Calo</h1>
-    <p>Aquí atoparás toda a información necesaria para que a túa experiencia en Rebordelo sexa perfecta.</p>
+    <p style="text-align: center; color: white;">Aquí atoparás toda a información necesaria para que a túa experiencia en Rebordelo sexa máis sinxela.</p>
 
     <main class="grid-info-cards">
       <section id="organizacion" class="cardInfo">
@@ -210,8 +210,8 @@
           >Ir á enquisa</a
         >
       </section> -->
+      <button id="btn-top" title="Volver arriba">↑</button>
     </main>
-    <button id="btn-top" title="Volver arriba">↑</button>
 
     <script>
 function boton(){
