Cambios varios + clasificacion

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             alt="Imaxe aérea da organización"
           />
           <br>
-          <a href="https://www.google.com/maps/place/Campo+de+Futbol+Rebordelo/@42.8252868,-8.5930013,17z/data=!3m1!4b1!4m6!3m5!1s0xd2f023856c1eb71:0x8b502e4683670afa!8m2!3d42.8252868!4d-8.5930013!16s%2Fg%2F11byv8l3wl?entry=ttu&g_ep=EgoyMDI1MDUwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener noreferrer">Ubicación a Rebordelo</a>
+          <a href="https://www.google.com/maps/place/Campo+de+Futbol+Rebordelo/@42.8252868,-8.5930013,17z/data=!3m1!4b1!4m6!3m5!1s0xd2f023856c1eb71:0x8b502e4683670afa!8m2!3d42.8252868!4d-8.5930013!16s%2Fg%2F11byv8l3wl?entry=ttu&g_ep=EgoyMDI1MDUwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener noreferrer">Ubicación de Rebordelo</a>
         </div>
       </section>
 
