--- a/clasificacion.html
+++ b/clasificacion.html
@@ -30,6 +30,14 @@
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
     }
+    .escudo-clasificacion {
+      height: 16px;
+      width: 16px;
+      object-fit: contain;
+      vertical-align: middle;
+      margin-right: 5px;
+    }
+
   </style>
   
 <body>
@@ -54,10 +62,10 @@
   <main class="contenedor">
     <h1>Clasificación</h1>
     <div id="loading">
-        <img src="/img/equipos/Calo.jpeg" id="spinner-img" alt="Cargando...">
+        <img src="/img/equipos/calo.jpeg" id="spinner-img" alt="Cargando...">
         <p>Cargando clasificación...</p>
     </div>
-    <table id="tabla-clasificacion" border="2px"></table>
+    <table id="clasificacion" border="2px"></table>
     <button id="btn-top" title="Volver arriba">↑</button>
 
   </main>
